# artillery_shells

./: CMakeLists.txt  README.md  TODO_list.txt  database.cpp  database.h  main.cpp  qml.qrc  window_bluprint.txt
qml/: Add_shells_window.qml  History_window.qml  Main.qml  Remove_shells_window.qml
